--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -45,7 +45,7 @@ li {
 
 li a{
   display: inline;
-  color: indigo;
+  color: navy;
   font-weight: bold;
   text-align: center;
   padding:20px 20px;
